Melhorando código de testes