@@ -18,21 +18,18 @@ import org.springframework.boot.test.autoconfigure.web.servlet.AutoConfigureMock
 import org.springframework.boot.test.context.SpringBootTest;
 import org.springframework.boot.test.mock.mockito.MockBean;
 import org.springframework.http.MediaType;
-import org.springframework.test.context.ActiveProfiles;
 import org.springframework.test.web.servlet.MockMvc;
 import org.springframework.test.web.servlet.request.MockMvcRequestBuilders;
 import org.springframework.test.web.servlet.result.MockMvcResultMatchers;
 
-import java.time.LocalDate;
-import java.util.Collections;
-import java.util.List;
-import java.util.Optional;
+import java.util.*;
 
 @SpringBootTest
 @AutoConfigureMockMvc
-@ActiveProfiles("test")
 class PessoaControllerTest {
 
+    private static final String PESSOAS = "/pessoas";
+    private static final String PESSOAS_1 = "/pessoas/1";
     @Autowired
     MockMvc mockMvc;
     @MockBean
@@ -51,18 +48,17 @@ class PessoaControllerTest {
     @BeforeEach
     public void iniciar() {
         MockitoAnnotations.openMocks(this);
-
     }
 
     @Test
     void deveriaListarPessoas() throws Exception {
-        Endereco endereco = criaEnderecoExemplo();
-        Pessoa pessoa = criaPessoaExemplo(Collections.singletonList(endereco));
+        Endereco endereco = EnderecoBuilder.criaEnderecoPrincipalExemplo();
+        Pessoa pessoa = PessoaBuilder.criaPessoaExemplo(Collections.singletonList(endereco));
 
-        Mockito.when(pessoasRepository.findAll()).thenReturn(List.of(pessoa));
+        Mockito.when(pessoasRepository.findAll()).thenReturn(new ArrayList<>(Collections.singletonList(pessoa)));
 
         mockMvc.perform(MockMvcRequestBuilders
-                .get("/pessoas")).andExpect(MockMvcResultMatchers.status().isOk());
+                .get(PESSOAS)).andExpect(MockMvcResultMatchers.status().isOk());
     }
 
     @Test
@@ -70,29 +66,33 @@ class PessoaControllerTest {
         Mockito.when(pessoasRepository.findById(ArgumentMatchers.anyLong())).thenReturn(Optional.empty());
 
         mockMvc.perform(MockMvcRequestBuilders
-                .get("/pessoas/1")).andExpect(MockMvcResultMatchers.status().isNotFound());
+                .get(PESSOAS_1)).andExpect(MockMvcResultMatchers.status().isNotFound());
     }
 
     @Test
     void deveriaDetalharUmaPessoaCadastrada() throws Exception {
-        Endereco endereco = criaEnderecoExemplo();
-        Pessoa pessoa = criaPessoaExemplo(Collections.singletonList(endereco));
+        Endereco endereco = EnderecoBuilder.criaEnderecoNaoPrincipalExemplo();
+        Pessoa pessoa = PessoaBuilder.criaPessoaExemplo(Collections.singletonList(endereco));
 
         Mockito.when(pessoasRepository.findById(ArgumentMatchers.anyLong())).thenReturn(Optional.of(pessoa));
 
-        mockMvc.perform(MockMvcRequestBuilders.get("/pessoas/1")).andExpect(MockMvcResultMatchers.status().isOk());
+        mockMvc.perform(MockMvcRequestBuilders.get(PESSOAS_1)).andExpect(MockMvcResultMatchers.status().isOk());
     }
 
     @Test
     void naoDeveriaCriarUmaPessoaComDadosInvalidos() throws Exception {
-        mockMvc.perform(MockMvcRequestBuilders.post("/pessoas")
+        Pessoa pessoa = PessoaBuilder.criaPessoaExemploSemEndereco();
+
+        Mockito.when(pessoasRepository.save(ArgumentMatchers.any())).thenReturn(pessoa);
+
+        mockMvc.perform(MockMvcRequestBuilders.post(PESSOAS)
                         .content(new JSONObject()
                                 .put("dataDeNascimento", "1993-12-05")
                                 .toString())
                         .contentType(MediaType.APPLICATION_JSON))
                 .andExpect(MockMvcResultMatchers.status().isBadRequest());
 
-        mockMvc.perform(MockMvcRequestBuilders.post("/pessoas")
+        mockMvc.perform(MockMvcRequestBuilders.post(PESSOAS)
                         .content(new JSONObject()
                                 .put("nome", "")
                                 .put("dataDeNascimento", "1993-12-05")
@@ -100,7 +100,7 @@ class PessoaControllerTest {
                         .contentType(MediaType.APPLICATION_JSON))
                 .andExpect(MockMvcResultMatchers.status().isBadRequest());
 
-        mockMvc.perform(MockMvcRequestBuilders.post("/pessoas")
+        mockMvc.perform(MockMvcRequestBuilders.post(PESSOAS)
                         .content(new JSONObject()
                                 .put("nome", "Juliano")
                                 .put("dataDeNascimento", "199-12-05")
@@ -108,14 +108,14 @@ class PessoaControllerTest {
                         .contentType(MediaType.APPLICATION_JSON))
                 .andExpect(MockMvcResultMatchers.status().isBadRequest());
 
-        mockMvc.perform(MockMvcRequestBuilders.post("/pessoas")
+        mockMvc.perform(MockMvcRequestBuilders.post(PESSOAS)
                         .content(new JSONObject()
                                 .put("nome", "Juliano")
                                 .toString())
                         .contentType(MediaType.APPLICATION_JSON))
                 .andExpect(MockMvcResultMatchers.status().isBadRequest());
 
-        mockMvc.perform(MockMvcRequestBuilders.post("/pessoas")
+        mockMvc.perform(MockMvcRequestBuilders.post(PESSOAS)
                         .content(new JSONObject()
                                 .put("nome", "Juliano")
                                 .put("dataDeNascimento", "")
@@ -126,11 +126,11 @@ class PessoaControllerTest {
 
     @Test
     void deveriaCriarUmaPessoa() throws Exception {
-        Pessoa pessoa = criaPessoaExemploSemEndereco();
+        Pessoa pessoa = PessoaBuilder.criaPessoaExemploSemEndereco();
 
         Mockito.when(pessoasRepository.save(ArgumentMatchers.any())).thenReturn(pessoa);
 
-        mockMvc.perform(MockMvcRequestBuilders.post("/pessoas")
+        mockMvc.perform(MockMvcRequestBuilders.post(PESSOAS)
                         .content(JsonCadastro)
                         .contentType(MediaType.APPLICATION_JSON))
                 .andExpect(MockMvcResultMatchers.status().isCreated());
@@ -138,33 +138,12 @@ class PessoaControllerTest {
 
     @Test
     void deveriaEditarUmaPessoa() throws Exception {
-        Pessoa pessoa = criaPessoaExemploSemEndereco();
+        Pessoa pessoa = PessoaBuilder.criaPessoaExemploSemEndereco();
 
         Mockito.when(pessoasRepository.findById(ArgumentMatchers.anyLong())).thenReturn(Optional.of(pessoa));
 
-        mockMvc.perform(MockMvcRequestBuilders.put("/pessoas/1")
+        mockMvc.perform(MockMvcRequestBuilders.put(PESSOAS_1)
                         .content(JsonCadastro).contentType(MediaType.APPLICATION_JSON))
                 .andExpect(MockMvcResultMatchers.status().isOk());
-    }
-
-    private Endereco criaEnderecoExemplo() {
-        return new EnderecoBuilder()
-                .comLogradouroCEPNumeroECidade("Av. tal", "49000-000", 1000, "Aracaju")
-                .enderecoPrincipal(true).criar();
-    }
-
-    private Pessoa criaPessoaExemplo(List<Endereco> enderecos) {
-        PessoaBuilder pessoaBuilder = new PessoaBuilder()
-                .comNome("Juliano")
-                .comDataDeNascimento(LocalDate.of(1994, 9, 16));
-        enderecos.forEach(pessoaBuilder::comEndereco);
-        return pessoaBuilder.criar();
-    }
-
-    private Pessoa criaPessoaExemploSemEndereco() {
-        return new PessoaBuilder()
-                .comNome("Juliano")
-                .comDataDeNascimento(LocalDate.of(1994, 9, 16))
-                .criar();
     }
 }
